html and css updates
Co-authored-by: yv09716-alt <yv09716-alt@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="box1">
+        <div class="box1">
+            <img src="./image.png" alt="logo" height="50px" width="50px" class="box2">
+        </div>
+        <nav class="box2">
 
-            <div>
-                <img src="./image.png" alt="logo" height="50px" width="50px">
-            </div>
 
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="login.html">Login</a></li>
+            <ul class="box2">
+                <li class="box2"><a href="index.html" class="box2">Home</a></li>
+                <li class="box2"><a href="sobre.html" class="box2">Sobre</a></li>
+                <li class="box2"><a href="contato.html" class="box2">Contato</a></li>
+                <li class="box2"><a href="login.html" class="box2">Login</a></li>
             </ul>
 
-            <input type="button" value="Tema">
+            <button value="Tema" class="box2">&nbsp;</button>
+
+
 
         </nav>
     </header>
 
     <section class="sect1">
-        <div>
-            <h1 class="tit"> titutlo </h1>
-            <p> Converta seus videos do youtub para textos com a gente:</p>
+        <div class="box2">
+            <h1 class="tit"> titulo </h1>
+            <p> Converta seus videos do youtube para textos com a gente:</p>
         </div>
-        <div>
+        <div class="box2">
             <form>
 
 
@@ -43,24 +46,330 @@
             </form>
         </div>
     </section>
+
     <section>
-        <h2 class="tituto"> Sobre nós:</h2>
-        <p></p>
+
+        <h2>Why should you use our services</h2>
+
+        <p>Fast, accurate, and easy to use</p>
+
+        <div class="card">
+            <img src="" alt="icone">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card">
+            <img src="" alt="icone">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card">
+            <img src="" alt="icone">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card">
+            <img src="" alt="icone">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card">
+            <img src="" alt="icone">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card">
+            <img src="" alt="icone">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+
     </section>
+
+    <section>
+        <h2>How it works</h2>
+        <p>Three simple steps to get your transcript</p>
+
+        <div class="card">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+
+    </section>
+
+    <section>
+        <h2>Perfect for anyone</h2>
+        <p>Whether you're a content creator, researcher, or accessibility expert, our service is perfect for you</p>
+
+        <div class="card-horizontal">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card-horizontal">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card-horizontal">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card-horizontal">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card-horizontal">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+        <div class="card-horizontal">
+            <img src="" alt="icone">
+            <h4>Lorem, ipsum.</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+        </div>
+
+    </section>
+
+    <section>
+
+        <h2>Choose your plan</h2>
+        <p>Start with our flexible credit system - pay only for what you use </p>
+
+        <div class="card-wrapper">
+
+            <div class="card-buy">
+                <div class="card-pack"> placeholder Pack</div>
+                <div class="card-use"> placeholder Use</div>
+                <div class="card-old-price">32.99</div>
+                <div class="card-new-price">19.99</div>
+                <div class="card-discount">50% off</div>
+                <div class="card-save">save x amount</div>
+                <div class="card-onetime">One-time payment</div>
+                <div class="card-credits">100 Credits</div>
+                <div class="card-bonus-credits">0 Bonus Credits</div>
+                <div class="card-total-credits">Total: 100 Credits</div>
+                <div class="card-value-per-credit">$0.50 per credit</div>
+                <div class="card-old-value-per-credit">$1.00 per credit</div>
+                <div class="card-btn">Buy now</div>
+            </div>
+
+            <div class="card-buy">
+                <div class="card-pack"> placeholder Pack</div>
+                <div class="card-use"> placeholder Use</div>
+                <div class="card-old-price">32.99</div>
+                <div class="card-new-price">19.99</div>
+                <div class="card-discount">50% off</div>
+                <div class="card-save">save x amount</div>
+                <div class="card-onetime">One-time payment</div>
+                <div class="card-credits">100 Credits</div>
+                <div class="card-bonus-credits">0 Bonus Credits</div>
+                <div class="card-total-credits">Total: 100 Credits</div>
+                <div class="card-value-per-credit">$0.50 per credit</div>
+                <div class="card-old-value-per-credit">$1.00 per credit</div>
+                <div class="card-btn">Buy now</div>
+            </div>
+
+            <div class="card-buy">
+                <div class="card-pack"> placeholder Pack</div>
+                <div class="card-use"> placeholder Use</div>
+                <div class="card-old-price">32.99</div>
+                <div class="card-new-price">19.99</div>
+                <div class="card-discount">50% off</div>
+                <div class="card-save">save x amount</div>
+                <div class="card-onetime">One-time payment</div>
+                <div class="card-credits">100 Credits</div>
+                <div class="card-bonus-credits">0 Bonus Credits</div>
+                <div class="card-total-credits">Total: 100 Credits</div>
+                <div class="card-value-per-credit">$0.50 per credit</div>
+                <div class="card-old-value-per-credit">$1.00 per credit</div>
+                <div class="card-btn">Buy now</div>
+            </div>
+
+            <div class="card-buy">
+                <div class="card-pack"> placeholder Pack</div>
+                <div class="card-use"> placeholder Use</div>
+                <div class="card-old-price">32.99</div>
+                <div class="card-new-price">19.99</div>
+                <div class="card-discount">50% off</div>
+                <div class="card-save">save x amount</div>
+                <div class="card-onetime">One-time payment</div>
+                <div class="card-credits">100 Credits</div>
+                <div class="card-bonus-credits">0 Bonus Credits</div>
+                <div class="card-total-credits">Total: 100 Credits</div>
+                <div class="card-value-per-credit">$0.50 per credit</div>
+                <div class="card-old-value-per-credit">$1.00 per credit</div>
+                <div class="card-btn">Buy now</div>
+            </div>
+        </div>
+
+        <h3>What You Get</h3>
+
+        <div class="card-wrapper">
+
+            <div class="card">
+                <img src="" alt="icone">
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+            </div>
+
+            <div class="card">
+                <img src="" alt="icone">
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+            </div>
+
+            <div class="card">
+                <img src="" alt="icone">
+                <h4>Lorem, ipsum.</h4>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi, esse!</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section>
+        <h2>Frequently Asked Questions</h2>
+        <p>Have a question? We've got answers</p>
+
+        <div class="card-wrapper">
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 1</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 1</p>
+                </div>
+            </div>
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 2</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 2</p>
+                </div>
+            </div>
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 3</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 3</p>
+                </div>
+            </div>
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 4</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 4</p>
+                </div>
+            </div>
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 5</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 5</p>
+                </div>
+            </div>
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 6</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 6</p>
+                </div>
+            </div>
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 7</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 7</p>
+                </div>
+            </div>
+            <div class="card-faq">
+                <div class="card-faq-title">
+                    <h3>Question 8</h3>
+                </div>
+                <div class="card-faq-answer">
+                    <p>Answer 8</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <div>
+
+        <H2>Ready to get started?</H2>
+        <p>Start transcribing your Youtube videos today</p>
+
+        <button>Get started</button>
+
+    </div>
 
 
     <footer>
 
+        <div class="center">
+            <h3>Titulo site aqui</h3>
 
-
-
-
-        <div class="copyright">
-            <p>Copyright &copy; 2026 - Todos os direitos reservados</p>
+            <p> Transform YouTube videos and playlists into accurate text transcripts instantly. Perfect for content
+                creators, researchers, and accessibility needs. </p>
         </div>
 
-        <div id="feitocomamor">
-            <p>Feito com ♥️ para você</p>
+        <div>
+            <h4>Produto</h4>
+            <a class="footer-link" href="">Link 1</a>
+            <a class="footer-link" href="">Link 2</a>
+            <a class="footer-link" href="">Link 3</a>
+            <a class="footer-link" href="">Link 4</a>
+        </div>
+
+        <div>
+            <h4>Conta</h4>
+            <a class="footer-link" href="">Link 1</a>
+            <a class="footer-link" href="">Link 2</a>
+            <a class="footer-link" href="">Link 3</a>
+            <a class="footer-link" href="">Link 4</a>
+        </div>
+
+        <div>
+            <h4>Suporte</h4>
+            <a class="footer-link" href="">Link 1</a>
+            <a class="footer-link" href="">Link 2</a>
+            <a class="footer-link" href="">Link 3</a>
+            <a class="footer-link" href="">Link 4</a>
+        </div>
+
+        <div>
+            <h4>Legal</h4>
+            <a class="footer-link" href="">Link 1</a>
+            <a class="footer-link" href="">Link 2</a>
+            <a class="footer-link" href="">Link 3</a>
+            <a class="footer-link" href="">Link 4</a>
+        </div>
+
+
+        <div id="bottom-footer">
+            <div class="copyright">
+                <p>Copyright &copy; 2026 - Todos os direitos reservados</p>
+            </div>
+
+            <div id="feitocomamor">
+                <p>Feito com ♥️ para você</p>
+            </div>
         </div>
 
     </footer>
